[FIX] alignment of launch buttons

--- a/src/System/Assets/css/epesi.css
+++ b/src/System/Assets/css/epesi.css
@@ -52,6 +52,7 @@
 .launch.button {
 	width: auto;
 	height: 90px;
+	display: inline-flex;
 }
 
 .ui.launch.icon.button i.icon {
